# pybuckfs

./: .gitignore  README.md  buckfs.yaml  pyproject.toml  requirments.txt
buckfs/: __init__.py  bfs.py  bucket.py  cache.py  cli.py  dir.py  localObject.py  object.py  objectCollection.py  remote.py  remoteObject.py  syncJob.py
docs/: readme_src.org
